[*] Refactor